# SO2-notes

./: CMakeLists.txt  Makefile  OnikenX_handles.cpp  OnikenX_handles.h  README.md  SO2-notes.sln  SO2-notes.vcxproj  SO2-notes.vcxproj.filters  Source.cpp  ex4.cpp  main.cpp
others/: CMakeLists.txt  SO2-notes.vcxproj  SO2-notes.vcxproj.filters  paths
others/so2_ficha3_e1-3/: SO2_F3_DLL.h
src/: OWin32Wrapper.h
src/Ficha4/: main.cpp
src/Ficha6/: shared.c  shared.h
src/Ficha6/Consumidor/: main.cpp
src/Ficha6/Produtor/: main.cpp
src/Ficha7/: client.cpp  main.cpp  server.cpp
src/Global/: OWin32Wrapper.h  ficha1.cpp  ficha1.h  ficha2.cpp  ficha2.h  ficha3.cpp  ficha3.h  ficha4.cpp  main.cpp
